creado nmicrosite summer delight

--- a/colectivos/ilimitada_avanzada_600/resources/templates/partials/banner.hbs
+++ b/colectivos/ilimitada_avanzada_600/resources/templates/partials/banner.hbs
@@ -16,7 +16,7 @@
           target="_blank"
           href="{{ banner.cta.url }}"
           data-analytics-element="{{ banner.cta.element }}"
-          data-analytics-context="{{ banner.cta.content }}"
+          data-analytics-context="{{ banner.cta.context }}"
           data-analytics-category="{{ banner.cta.category }}"
           data-analytics-id="{{ banner.cta.id }}"
         >
@@ -242,7 +242,7 @@
                         href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ cta.loquiero.[0] }}&tcli=0&tta=1"
                         onmousedown="addtocart(utag_data.plans_add2cart[0])"
                         data-analytics-element="{{ticket.offers.portability.cta.element}}"
-                        data-analytics-context="{{ticket.offers.portability.cta.content}}"
+                        data-analytics-context="{{ticket.offers.portability.cta.context}}"
                         data-analytics-category="{{ticket.offers.portability.cta.category}}"
                         data-analytics-id="{{ticket.offers.portability.cta.id}}"
                       >
@@ -280,7 +280,7 @@
                         href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ cta.loquiero.[1] }}&tcli=0&tta=1"
                         onmousedown="addtocart(utag_data.plans_add2cart[1])"
                         data-analytics-element="{{ticket.offers.newNumber.cta.element}}"
-                        data-analytics-context="{{ticket.offers.newNumber.cta.content}}"
+                        data-analytics-context="{{ticket.offers.newNumber.cta.context}}"
                         data-analytics-category="{{ticket.offers.newNumber.cta.category}}"
                         data-analytics-id="{{ticket.offers.newNumber.cta.id}}"
                       >
