--- a/colectivos/ilimitada_avanzada_600/resources/templates/partials/sticky-bottom.hbs
+++ b/colectivos/ilimitada_avanzada_600/resources/templates/partials/sticky-bottom.hbs
@@ -23,7 +23,7 @@
           href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{cta.loquiero.[0]}}&tcli=0&tta=1"
           onmousedown="addtocart(utag_data.plans_add2cart[0])"
           data-analytics-element="stiky inferior"
-          data-analytics-context="{{ticket.offers.portability.cta.content}}"
+          data-analytics-context="{{ticket.offers.portability.cta.context}}"
           data-analytics-category="{{ticket.offers.portability.cta.category}}"
           data-analytics-id="{{ticket.offers.portability.cta.id}}"
         >
@@ -53,7 +53,7 @@
           href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{cta.loquiero.[1]}}&tcli=0&tta=1"
           onmousedown="addtocart(utag_data.plans_add2cart[1])"
           data-analytics-element="stiky inferior"
-          data-analytics-context="{{ticket.offers.newNumber.cta.content}}"
+          data-analytics-context="{{ticket.offers.newNumber.cta.context}}"
           data-analytics-category="{{ticket.offers.newNumber.cta.category}}"
           data-analytics-id="{{ticket.offers.newNumber.cta.id}}"
         >
