--- a/one/ilimitada-plus-600/resources/templates/partials/header-ticket.hbs
+++ b/one/ilimitada-plus-600/resources/templates/partials/header-ticket.hbs
@@ -212,7 +212,7 @@
                         href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ cta.loquiero.[0] }}&tcli=0&tta=1"
                         onmousedown="addtocart(utag_data.plans_add2cart[0])"
                         data-analytics-element="{{cta.element}}"
-                        data-analytics-context="{{cta.content}}"
+                        data-analytics-context="{{cta.context}}"
                         data-analytics-category="{{cta.category}}"
                         data-analytics-id="{{cta.id}}"
                       >
@@ -257,7 +257,7 @@
                         href="https://www.vodafone.es/c/tienda-online/particulares/contratacion?id={{ cta.loquiero.[1] }}&tcli=0&tta=1"
                         onmousedown="addtocart(utag_data.plans_add2cart[1])"
                         data-analytics-element="{{cta.element}}"
-                        data-analytics-context="{{cta.content}}"
+                        data-analytics-context="{{cta.context}}"
                         data-analytics-category="{{cta.category}}"
                         data-analytics-id="{{cta.id}}"
                       >
