pelenaca: wip v-home

--- a/v-home/resources/templates/partials/discovery.hbs
+++ b/v-home/resources/templates/partials/discovery.hbs
@@ -7,10 +7,10 @@
                 <img class="ws10-c-feature-hifi__icon" src="img/discovery/ic-upload.svg" />
             </span>
             <p class="ws10-c-feature-hifi__title">
-                Monitoriza tu hogar desde tu smartphone
+                Controla tu hogar desde tu smartphone
             </p>
             <p class="ws10-c-feature-hifi__text">
-                Podrás ver tu casa desde el móvil en directo y almacenar vídeos en la nube, sin gastar datos de tu tarifa.
+                Podrás ver lo que ocurre en tu  casa desde el móvil en directo y almacenar videos en la nube, sin gastar datos de tu tarifa.
             </p>
         </article>
         <article class="ws10-c-feature-hifi ws10-o-layout__item ws10-u--1/3@tablet">
@@ -29,10 +29,10 @@
                 <img class="ws10-c-feature-hifi__icon" src="img/discovery/ic-call.svg" />
             </span>
             <p class="ws10-c-feature-hifi__title">
-                Si no estás disponible, te llamamos
+                Hogar inteligente
             </p>
             <p class="ws10-c-feature-hifi__text">
-                Incluso, recibir una llamada automática cuando algo sucede.
+               Controla las luces, la temperatura y otros dispositivos inteligentes compatibles con V- Home.
             </p>
         </article>
     </div>
