--- a/v-home/resources/templates/partials/iot.hbs
+++ b/v-home/resources/templates/partials/iot.hbs
@@ -1,6 +1,6 @@
 <!-- Sección Banner + Ticket flotante -->
 <section class="vf-discovery ws10-o-layout__item ws10-u--2/3@desktop ws10-u--1/1@tablet ws10-u--pt6x">
-    <h2 class="ws10-u-heading--3"><strong>Otros objetos conectados a Vodafone</strong></h2>
+    <h2 class="ws10-u-heading--3"><strong> Descubre más dispositivos compatibles con V-Home</strong></h2>
     <div class="ws10-o-layout ws10-o-layout--vertical-flush">
         <div class="ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/2@desktop">
             <div class="ws10-c-cards-discovery-standard ws10-c-cards-discovery-standard--conten-left ws10-c-cards-discovery-standard--large vf-card--align">
