--- a/v-home/resources/templates/partials/noSurprise.hbs
+++ b/v-home/resources/templates/partials/noSurprise.hbs
@@ -5,7 +5,7 @@
     <p data-js-vf="_surpriseContado">Sin permanencia.</p>
     <p class="ws10-u--hidden" data-js-vf="_surprisePlazos">Permanencia 24 meses.</p>
     <p>¿Cuánto voy a pagar?  
-        <span class="vf-block" data-js-vf="_surpriseContado2"><strong>Safety Starter Kit:</strong> 120€ pago inicial + 4€/mes de suscripción</span>
+        <span class="vf-block" data-js-vf="_surpriseContado2"><strong>Safety Starter Kit:</strong> 120€ pago inicial de los dispositivos + 4€/mes de suscripción.</span>
         <span class="vf-block ws10-u--hidden" data-js-vf="_surprisePlazos2"><strong>Safety Starter Kit:</strong> 8€/mes + 4€/mes de suscripción</span>
     </p>
     <p>La cuota mensual de servicio comenzará a cobrarse una vez que se active en la aplicación Vodafone Smart App.</p>
