--- a/v-home/resources/templates/partials/safetyKit.hbs
+++ b/v-home/resources/templates/partials/safetyKit.hbs
@@ -1,7 +1,7 @@
 <!-- Sección Banner + Ticket flotante -->
 <section class="vf-discovery ws10-o-layout__item ws10-u--2/3@desktop ws10-u--1/1@tablet ws10-u--pt6x">
     <h3 class="ws10-u-heading--4-lt">Safety Starter Kit</h3>
-    <h4 class="ws10-u-heading--3-lt">V-Home pone a tu disposición el servicio de seguridad más completo con el Safety Starter Kit</h4>
+    <h4 class="ws10-u-heading--3-lt">V-Home pone a tu disposición el servicio de vigilancia y control más completo con el Safety Starter Kit</h4>
     <picture>
         <source class="vf-image" srcset="img/safety-kit/image.webp" type="image/webp">
         <source class="vf-image" srcset="img/safety-kit/image.png" type="image/png">
@@ -61,8 +61,6 @@
                                         <div class="ws10-c-tray-quick-action__content">
                                             <div class="ws10-c-tray-quick-action__text">
                                                 <p class="ws10-c-tray-quick-action__title ws10-c-tray-quick-action__title--bold">Cámara</p>
-
-                                                <p class="ws10-c-tray-quick-action__title">de vídeo</p>
                                             </div>
                                             <picture class="ws10-c-tray-quick-action__image">
                                                 <source srcset="img/safety-kit/backdrop/camera.webp" type="image/webp">
@@ -134,27 +132,31 @@
                                             <title> titulo icono </title>
                                             <use class="icon" xlink:href="#icon-tick-or-solved"></use>
                                     </svg>
-                                    <p class="ws10-c-list-icon__text">Proporciona imágenes de gran calidad y dispone de detección de movimiento e infrarrojos para iluminar por la noche.</p>
+                                    <p class="ws10-c-list-icon__text"><strong>Hub:</strong> Un dispositivo compacto que conecta y  gestiona los múltiples dispositivos inteligentes compatibles con SmartThings de Samsung.</p>
                                 </li>
-                                <li role="option" class="ws10-c-list-icon__item ws10-u--ml8x">
-                                    <p class="ws10-c-list-icon__text">Permite ver lo que está sucediendo en tiempo real y almacenar videos en la nube.</p>
-                                </li>
-                                <li role="option" class="ws10-c-list-icon__item ws10-c-list-icon__item--multi-line">
+                                 <li role="option" class="ws10-c-list-icon__item">
                                     <svg class="ws10-c-list-icon__icon ws10-u-color--ui-green" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                                             <title> titulo icono </title>
                                             <use class="icon" xlink:href="#icon-tick-or-solved"></use>
                                     </svg>
-                                    <p class="ws10-c-list-icon__text"><strong>Características:</strong></p>
+                                    <p class="ws10-c-list-icon__text"><strong>Cámara:</strong> Permite ver desde el móvil lo que esta sucediendo en tiempo real, graba y almacena videos en la nube. Proporciona imágenes de gran calidad y dispones de detección de movimiento e infrarrojos durante la noche.</p>
                                 </li>
-                                <ul class="ws10-u--ml12x">
-                                        <li>Controla tu hogar de día o de noche con video HD.</li>
-                                        <li>Recibe avisos si se detecta actividad inesperada.</li> 
-                                        <li>Activa el encendido de luces u otros dispositivos inteligentes.</li> 
-                                        <li>La mejor calidad de imagen incluso con poca luz.</li> 
-                                        <li>Visión nocturna.</li> 
-                                        <li>Video en calidad 720p HD.</li> 
-                                        <li>2 años de garantía.</li>	
-                                </ul>
+                                 <li role="option" class="ws10-c-list-icon__item">
+                                    <svg class="ws10-c-list-icon__icon ws10-u-color--ui-green" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                                            <title> titulo icono </title>
+                                            <use class="icon" xlink:href="#icon-tick-or-solved"></use>
+                                    </svg>
+                                    <p class="ws10-c-list-icon__text"><strong>Sensor de puertas y ventanas:</strong> se coloca en puertas o ventanas y emite una alerta inmediata si estas se abren o no se dejan bien cerradas. También monitoriza cambios en la temperatura, enviando alertas si la habitación está muy fría o caliente.</p>
+                                </li>
+                                 <li role="option" class="ws10-c-list-icon__item">
+                                    <svg class="ws10-c-list-icon__icon ws10-u-color--ui-green" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                                            <title> titulo icono </title>
+                                            <use class="icon" xlink:href="#icon-tick-or-solved"></use>
+                                    </svg>
+                                    <p class="ws10-c-list-icon__text"><strong>Alarma:</strong> Sirena que se activa automáticamente cuando los sensores detectan movimiento. Puede sonar hasta 85 decibelios y emitir luz.</p>
+                                </li>
+                                <p class="ws10-c-list-icon__text">Todos los dispositivos se controlan desde la app SmartThings de Samsung. Disponible para Android y iOS.</p>
+                                <p class="ws10-c-list-icon__text">2 años de garantía.</p>
                             </ul>
                         </div>
                         <div id="panel-3" aria-labelledby="control3" class="ws10-c-tabs-group__content ws10-o-tabs__panel" role="tabpanel" tabindex="0" hidden="hidden">
