--- a/v-home/resources/templates/partials/steps.hbs
+++ b/v-home/resources/templates/partials/steps.hbs
@@ -5,7 +5,7 @@
         <li class="ws10-c-timeline-steps__item">
             <img src="img/steps/download.svg" class="ws10-c-timeline-steps__icon" width='48px' height='48px' />
             <h4 class="ws10-c-timeline-steps__title">Descarga la App</h4>
-            <p class="ws10-c-timeline-steps__text">Descárgate la app V by Vodafone del App Store o Google Play y activa la suscripción.</p>
+            <p class="ws10-c-timeline-steps__text">Descárgate la Vodafone Smart App del App Store o Google Play y activa la suscripción</p>
         </li>
         <li class="ws10-c-timeline-steps__item">
             <svg class="ws10-c-timeline-steps__icon" xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='48px' height='48px'><title>Business</title><use xlink:href='#icon-engineer-mid'></use></svg>
