--- a/v-home/resources/templates/partials/features.hbs
+++ b/v-home/resources/templates/partials/features.hbs
@@ -1,7 +1,7 @@
 <!-- Sección Banner + Ticket flotante -->
 <section class="vf-discovery ws10-o-layout__item ws10-u--2/3@desktop ws10-u--1/1@tablet ws10-u--pt6x">
     <h3 class="ws10-u-heading--4-lt">Servicio V-Home</h3>
-    <h4 class="ws10-u-heading--3-lt">Monitoriza todo lo que ocurre en tu hogar desde tu smartphone</h4>
+    <h4 class="ws10-u-heading--3-lt">Monitoriza y controla lo que ocurre en tu hogar desde tu smartphone</h4>
     <picture>
         <source class="vf-image" srcset="img/features/v-home.webp" type="image/webp">
         <source class="vf-image" srcset="img/features/v-home.jpg" type="image/png">
@@ -24,7 +24,7 @@
                 <use class="icon-v3" xlink:href="#icon-landline-or-call-mid"></use>
             </svg>
             </div>
-            <p class="ws10-c-product-detail__text">Si no respondes a la las notificaciones enviadas, te llamaremos a ti o a los números de contacto que hayas indicado para estas situaciones.</p>
+            <p class="ws10-c-product-detail__text">Si no respondes a las notificaciones enviadas, el sistema te realizará una llamada automática para avisarte.</p>
         </div>
         <div class="ws10-c-product-detail ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/2@desktop ws10-u--pt5x">
             <div class="ws10-c-product-detail__icon">
@@ -42,7 +42,7 @@
                 <use class="icon-v3" xlink:href="#icon-blog-mid"></use>
             </svg>
             </div>
-            <p class="ws10-c-product-detail__text">Podrás establecer y personalizar una serie de reglas automáticas para recibir alertas cuando ocurren eventos en el hogar.</p>
+            <p class="ws10-c-product-detail__text">V-Home te permite conectar distintos dispositivos como bombillas, enchufes, termostatos, altavoces inteligentes, etc para convertir tu casa en un hogar inteligente.</p>
         </div>
         <div class="ws10-c-product-detail ws10-o-layout__item ws10-u--1/2@tablet ws10-u--1/2@desktop ws10-u--pt5x">
             <div class="ws10-c-product-detail__icon">
@@ -60,7 +60,7 @@
                 <use class="icon-v3" xlink:href="#icon-data-mid"></use>
             </svg>
             </div>
-            <p class="ws10-c-product-detail__text">Podrás ver desde el smartphone lo que está grabando la cámara de V-Home sin que consuma datos de tu tarifa móvil (si eres cliente móvil de Vodafone).</p>
+            <p class="ws10-c-product-detail__text">Visualiza ver desde el smartphone lo que está grabando la cámara de V-Home sin que consuma datos de tu tarifa móvil (si eres cliente móvil de Vodafone).</p>
         </div>
     </div>
 </section>
