--- a/summerdelight/resources/templates/partials/cardsTV.hbs
+++ b/summerdelight/resources/templates/partials/cardsTV.hbs
@@ -1,4 +1,4 @@
-<div class="ws10-o-layout">
+<section class="vf-cards-tv ws10-u--pt12x">
     {{#each cardsTV.family }}
     <div class="ws10-o-layout__item ws10-u--1/3">
         <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--{{ color }}">
@@ -48,4 +48,4 @@
         </div>
     </div>
     {{/each }}
-</div>
+</section>
