SummerDelight - Layout fixes

--- a/summerdelight/resources/templates/index.hbs
+++ b/summerdelight/resources/templates/index.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html class="no-js" lang="es">
 	<head>
 		<meta charset="utf-8">
@@ -13,27 +13,24 @@
 			})();
 		</script>
 	</head>
-	<body>
-		<div data-ws10-spritesheet="img/svg/sprite.mva10.svg" data-ws10-js="spritesheet-loader"></div>
-		<div data-ws10-spritesheet="img/svg/sprite.mid.svg" data-ws10-js="spritesheet-loader"></div>
+	<body> -->
+		<!-- <div data-ws10-spritesheet="img/svg/sprite.mva10.svg" data-ws10-js="spritesheet-loader"></div>
+		<div data-ws10-spritesheet="img/svg/sprite.mid.svg" data-ws10-js="spritesheet-loader"></div> -->
 
 		<!--
 		<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="" style="visibility: hidden;opacity: 0">
 		-->
 
-			<!-- HERO -->
-			{{> hero }}
+		<link href="css/ws10.css" rel="stylesheet"  />
+		<link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 
-			<div class="ws10-o-wrapper">
-				<div class="ws10-o-layout">
-					<!-- <div class="ws10-o-layout__item ws10-u--1/1@desktop ws10-u--3/5@tablet"> -->
-						<!-- CARDS TV -->
-						{{> cardsTV }}
-						<!-- TIMELINE -->
-						{{> timeline }}
-					<!-- </div> -->
-				</div>
-			</div>
+		<!-- Section Hero -->
+		{{> hero }}
+		<div class="ws10-o-wrapper">
+			{{> cardsTV }}
+			<!-- Section Timeline -->
+			{{> timeline }}
+		</div>
 
 		<!--
 		</div>
@@ -41,5 +38,5 @@
 
 		<script src="js/ws10.js"></script>
 		<script src="js/main.js"></script>
-	</body>
-</html>
+	<!-- </body>
+</html> -->
