--- a/summerdelight/resources/templates/index.hbs
+++ b/summerdelight/resources/templates/index.hbs
@@ -27,6 +27,9 @@
 		<!-- Section Hero -->
 		{{> hero }}
 		<div class="ws10-o-wrapper">
+			<!-- Filters -->
+			{{> filters }}
+			<!-- Section Cards TV -->
 			{{> cardsTV }}
 			<!-- Section Timeline -->
 			{{> timeline }}
