--- a/summerdelight/resources/templates/partials/timeline.hbs
+++ b/summerdelight/resources/templates/partials/timeline.hbs
@@ -1,4 +1,4 @@
-<section class="vf-timeline ws10-u--pt12x">
+<section class="vf-timeline ws10-u--pt12x ws10-c-timeline-steps--dark">
     <h3 class="ws10-u-heading--4">
         <strong>{{ timeline.title }}</strong>
     </h3>
