--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -1,4 +1,7 @@
-<section class="vf-cards-tv ws10-u--pt8x ws10-u--pb8x">
+<!--
+<section class="ws10-c-tabs-filter ws10-o-tabs" data-ws10-js="tabs-filter">
+-->
+<section class="ws10-u--pt4x ws10-u--pb4x">
     <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
         <span class="ws10-c-filter">
             <input type="checkbox" class="ws10-c-filter__input" id="idFilter1" name="nameInput" value="value" checked />
