--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -1,15 +1,12 @@
-<!--
-<section class="ws10-c-tabs-filter ws10-o-tabs" data-ws10-js="tabs-filter">
--->
 <section class="ws10-u--pt4x ws10-u--pb4x">
     <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
-        <span class="ws10-c-filter">
+        <span class="ws10-c-filter ws10-u--mr2x vf-filter-one" data-js-vf="_filter">
             <input type="checkbox" class="ws10-c-filter__input" id="idFilter1" name="nameInput" value="value" checked />
             <label class="ws10-c-filter__label ws10-c-filter__label" for="idFilter1"> {{ filters.[0] }} </label>
         </span>
-        <span class="ws10-c-filter ws10-c-filter--white">
-            <input type="checkbox" class="ws10-c-filter__input" id="idFilter3" name="nameInput" value="value" />
-            <label class="ws10-c-filter__label ws10-c-filter__label--grey" for="idFilter3"> {{ filters.[1] }} </label>
+        <span class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x vf-filter-two" data-js-vf="_filter">
+            <input type="checkbox" class="ws10-c-filter__input" id="idFilter2" name="nameInput" value="value" />
+            <label class="ws10-c-filter__label ws10-c-filter__label--grey" for="idFilter2"> {{ filters.[1] }} </label>
         </span>
     </div>
 </section>
