--- a/summerdelight/resources/templates/partials/timeline.hbs
+++ b/summerdelight/resources/templates/partials/timeline.hbs
@@ -5,17 +5,12 @@
     <ul class="ws10-c-timeline-steps">
         {{#each timeline.items }}
             <li class="ws10-c-timeline-steps__item">
-                <svg
-                    class="ws10-c-timeline-steps__icon"
-                    xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink"
-                    width="48px"
-                    height="48px"
-                >
-                    <title>Business</title>
-                    <use xlink:href="#{{ icon }}"></use>
-                </svg>
-                <p class="ws10-c-timeline-steps__title">{{ title }}</p>
+                <img class="ws10-c-lazy-load ws10-c-lazy-load--skeleton-light ws10-c-timeline-steps__icon"
+                     src="img/timeline/{{ icon }}.png"
+                     data-ws10-js="lazy-load"
+                     loading="lazy"
+                     alt="">
+                 <p class="ws10-c-timeline-steps__title">{{ title }}</p>
                 <p class="ws10-c-timeline-steps__text">{{ subtitle }}</p>
             </li>
         {{/each }}
