--- a/summerdelight/resources/styles/_micro.scss
+++ b/summerdelight/resources/styles/_micro.scss
@@ -1,4 +1,9 @@
 // CSS del microsite
 .vfes-ms-content{
-
+    .vf-timeline{
+        & p {
+            max-width: inherit;
+            width: 85%;
+        }
+    }
 }
