--- a/summerdelight/resources/templates/index.hbs
+++ b/summerdelight/resources/templates/index.hbs
@@ -1,26 +1,20 @@
-<!--
-<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="" style="visibility: hidden;opacity: 0">
--->
+<div class="vfes-ms-content ws10-u-color--bg-light-grey" id="summerdelight" style="visibility: hidden;opacity: 0">
+	<link href="css/ws10.css" rel="stylesheet"  />
+	<link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
 
-<link href="css/ws10.css" rel="stylesheet"  />
-<link href="css/styles.css" rel="stylesheet" data-ws10-microcss  />
-
-<div class="ws10-u-color--white ws10-u-color--bg-midnight">
-	<!-- Section Hero -->
-	{{> hero }}
-	<div class="ws10-o-wrapper ws10-u--pt4x">
-		<!-- Filters -->
-		{{> filters }}
-		<!-- Section Cards TV -->
-		{{> cardsTV }}
-		<!-- Section Timeline -->
-		{{> timeline }}
+	<div class="ws10-u-color--white ws10-u-color--bg-midnight">
+		<!-- Section Hero -->
+		{{> hero }}
+		<div class="ws10-o-wrapper ws10-u--pt4x">
+			<!-- Filters -->
+			{{> filters }}
+			<!-- Section Cards TV -->
+			{{> cardsTV }}
+			<!-- Section Timeline -->
+			{{> timeline }}
+		</div>
 	</div>
 </div>
-
-<!--
-</div>
--->
 
 <script src="js/ws10.js"></script>
 <script src="js/main.js"></script>
