--- a/summerdelight/resources/templates/partials/cardsTV.hbs
+++ b/summerdelight/resources/templates/partials/cardsTV.hbs
@@ -1,7 +1,7 @@
 <section class="vf-cards-tv ws10-u--pt4x ws10-u--pb4x">
     <div class="ws10-o-layout ws10-flex__align-items--end">
     {{#each cardsTV }}
-        <div class="ws10-o-layout__item ws10-u--1/3" data-js-vf="{{ filter }}">
+        <div class="ws10-o-layout__item ws10-u--1/3@desktop ws10-u--1/1" data-js-vf="{{ filter }}">
             <div class="ws10-c-card-pack-tv ws10-c-card-pack-tv--{{ color }}">
                 <div class="ws10-c-card-pack-tv__header">
                     <picture class="ws10-c-card-pack-tv">
