--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -4,7 +4,7 @@
             <input type="checkbox" class="ws10-c-filter__input" id="idFilter1" name="nameInput" value="value" checked />
             <label class="ws10-c-filter__label ws10-c-filter__label" for="idFilter1"> {{ filters.[0] }} </label>
         </span>
-        <span class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x vf-filter-two" data-js-vf="_filter">
+        <span class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x ws10-u--mt4x@mobile vf-filter-two" data-js-vf="_filter">
             <input type="checkbox" class="ws10-c-filter__input" id="idFilter2" name="nameInput" value="value" />
             <label class="ws10-c-filter__label ws10-c-filter__label--grey" for="idFilter2"> {{ filters.[1] }} </label>
         </span>
