--- a/summerdelight/resources/templates/partials/cintillo-footer.hbs
+++ b/summerdelight/resources/templates/partials/cintillo-footer.hbs
@@ -1,23 +1,23 @@
-<section class="ws10-c-call-to-action-app">
-                    <div class="ws10-o-wrapper">
-                        <div class="ws10-c-call-to-action-app__container">
-                            <p class="ws10-c-call-to-action-app__text">
-                                Gestiona tu servicios y accede a productos personalizados desde la app Mi Vodafone
-                            </p>
-                            <div class="ws10-c-call-to-action-app__w-cta">
-                                <a href="#"
-                                   name="cta"
-                                   title="Ir a la App Mi Vodafone"
-                                   class="ws10-c-call-to-action-app__cta ws10-c-call-to-action-app__cta--webapp ws10-c-button ws10-c-button--tertiary ws10-c-button--dark">
-                                    Ir a la App Mi Vodafone
-                                </a>
-                                <a href="#"
-                                   name="cta"
-                                   title="Ir a la App Mi Vodafone"
-                                   class="ws10-c-call-to-action-app__cta ws10-c-call-to-action-app__cta--store ws10-c-button ws10-c-button--tertiary ws10-c-button--dark">
-                                    Ir a la App Mi Vodafone
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+<section class="ws10-c-call-to-action-app ws10-u--mt8x">
+    <div class="ws10-o-wrapper">
+        <div class="ws10-c-call-to-action-app__container">
+            <p class="ws10-c-call-to-action-app__text">
+                Gestiona tu servicios y accede a productos personalizados desde la app Mi Vodafone
+            </p>
+            <div class="ws10-c-call-to-action-app__w-cta">
+                <a href="#"
+                   name="cta"
+                   title="Ir a la App Mi Vodafone"
+                   class="ws10-c-call-to-action-app__cta ws10-c-call-to-action-app__cta--webapp ws10-c-button ws10-c-button--tertiary ws10-c-button--dark">
+                    Ir a la App Mi Vodafone
+                </a>
+                <a href="#"
+                   name="cta"
+                   title="Ir a la App Mi Vodafone"
+                   class="ws10-c-call-to-action-app__cta ws10-c-call-to-action-app__cta--store ws10-c-button ws10-c-button--tertiary ws10-c-button--dark">
+                    Ir a la App Mi Vodafone
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
