cambios de temaños y analitica(faltan dos btns)

--- a/summerdelight/resources/templates/partials/filters.hbs
+++ b/summerdelight/resources/templates/partials/filters.hbs
@@ -1,12 +1,38 @@
 <section class="ws10-u--pt4x ws10-u--pb4x">
-    <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
-        <span class="ws10-c-filter ws10-u--mr2x vf-filter-one" data-js-vf="_filter">
-            <input type="checkbox" class="ws10-c-filter__input" id="idFilter1" name="nameInput" value="value" checked />
-            <label class="ws10-c-filter__label ws10-c-filter__label" for="idFilter1"> {{ filters.[0] }} </label>
-        </span>
-        <span class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x ws10-u--mt4x@mobile vf-filter-two" data-js-vf="_filter">
-            <input type="checkbox" class="ws10-c-filter__input" id="idFilter2" name="nameInput" value="value" />
-            <label class="ws10-c-filter__label ws10-c-filter__label--grey" for="idFilter2"> {{ filters.[1] }} </label>
-        </span>
-    </div>
+  <div class="ws10-o-layout ws10-o-layout--stretch ws10-o-layout--center">
+    <span class="ws10-c-filter ws10-u--mr2x vf-filter-one" data-js-vf="_filter">
+      <input
+        type="checkbox"
+        class="ws10-c-filter__input"
+        id="idFilter1"
+        name="nameInput"
+        value="value"
+        data-analytics-category="cta"
+        data-analytics-element="tab distributiva"
+        data-analytics-context="clientes de movil, fibra, movil + fibra"
+        checked
+      />
+      <label class="ws10-c-filter__label ws10-c-filter__label" for="idFilter1">
+        {{filters.[0]}}
+      </label>
+    </span>
+    <span
+      class="ws10-c-filter ws10-c-filter--white ws10-u--ml2x ws10-u--mt4x@mobile vf-filter-two"
+      data-js-vf="_filter">
+      <input
+        type="checkbox"
+        class="ws10-c-filter__input"
+        id="idFilter2"
+        name="nameInput"
+        value="value"
+        data-analytics-category="cta"
+        data-analytics-element="tab distributiva"
+        data-analytics-context="clientes de tarifa familiar"
+      />
+      <label
+        class="ws10-c-filter__label ws10-c-filter__label--grey"
+        for="idFilter2"
+      > {{filters.[1]}} </label>
+    </span>
+  </div>
 </section>
