--- a/summerdelight/resources/templates/partials/timeline.hbs
+++ b/summerdelight/resources/templates/partials/timeline.hbs
@@ -1,7 +1,7 @@
 <section class="vf-timeline ws10-u--pt4x ws10-u--pb4x ws10-c-timeline-steps--dark">
-    <h3 class="ws10-u-heading--4">
+    <h4>
         <strong>{{ timeline.title }}</strong>
-    </h3>
+    </h4>
     <ul class="ws10-c-timeline-steps">
         {{#each timeline.items }}
             <li class="ws10-c-timeline-steps__item">
@@ -11,7 +11,7 @@
                      loading="lazy"
                      alt="">
                  <p class="ws10-c-timeline-steps__title">{{ title }}</p>
-                <p class="ws10-c-timeline-steps__text">{{ subtitle }}</p>
+                <p class=" ws10-u-heading--5-lt	ws10-c-timeline-steps__text">{{ subtitle }}</p>
             </li>
         {{/each }}
     </ul>
