--- a/summerdelight/resources/templates/partials/timeline.hbs
+++ b/summerdelight/resources/templates/partials/timeline.hbs
@@ -1,7 +1,5 @@
 <section class="vf-timeline ws10-u--pt4x ws10-u--pb4x ws10-c-timeline-steps--dark">
-    <h4>
-        <strong>{{ timeline.title }}</strong>
-    </h4>
+    <h3>{{ timeline.title }}</h3>
     <ul class="ws10-c-timeline-steps">
         {{#each timeline.items }}
             <li class="ws10-c-timeline-steps__item">
