SummerDelight - With FAQs

--- a/summerdelight/resources/templates/index.hbs
+++ b/summerdelight/resources/templates/index.hbs
@@ -11,7 +11,8 @@
 		{{> cardsTV }}
 		<!-- Section Timeline -->
 		{{> timeline }}
-
+		<!-- Faqs -->
+		{{> faqs }}
 		<!-- Link Legales -->
 		{{> legales }}
 	</div>
