cambios de url y minus de img

--- a/summerdelight/resources/templates/partials/cintillo-footer.hbs
+++ b/summerdelight/resources/templates/partials/cintillo-footer.hbs
@@ -7,7 +7,7 @@
       </p>
       <div class="ws10-c-call-to-action-app__w-cta">
         <a
-          href="#"
+          href="https://m.vodafone.es/web-camp-ver-2021"
           name="cta"
           title="Ir a la App Mi Vodafone"
           class="ws10-u-heading--5-lt ws10-c-call-to-action-app__cta ws10-c-call-to-action-app__cta--webapp ws10-c-button ws10-c-button--tertiary ws10-c-button--dark"
@@ -19,7 +19,7 @@
           Ir a la App Mi Vodafone
         </a>
         <a
-          href="#"
+          href="https://m.vodafone.es/web-camp-ver-2021"
           name="cta"
           title="Ir a la App Mi Vodafone"
           class="ws10-u-heading--5-lt ws10-c-call-to-action-app__cta ws10-c-call-to-action-app__cta--store ws10-c-button ws10-c-button--tertiary ws10-c-button--dark"
