--- a/summerdelight/resources/templates/partials/hero.hbs
+++ b/summerdelight/resources/templates/partials/hero.hbs
@@ -24,6 +24,7 @@
         </p>
         <p class="ws10-u-heading--5-lt">{{hero.subtitle}}</p>
         <div class="ws10-c-hero-dmp__w-btns">
+          <a href="https://m.vodafone.es/web-camp-ver-2021">
           <button
             class="ws10-u-heading--5-lt ws10-c-hero-dmp__btn ws10-c-button"
             data-ws10-hero-dmp-first-btn
@@ -35,6 +36,7 @@
           >
             {{hero.cta.label}}
           </button>
+          </a>
         </div>
       </div>
     </div>
