--- a/summerdelight/resources/templates/partials/cardsTV.hbs
+++ b/summerdelight/resources/templates/partials/cardsTV.hbs
@@ -63,7 +63,7 @@
               </span>
               <a
                 class="ws10-c-link-chevron ws10-c-link-chevron--fresh-orange ws10-c-link-chevron--small"
-                href="http://"
+                href="https://m.vodafone.es/web-camp-ver-2021"
                 data-analytics-category="cta"
                 data-analytics-element="listado packs tv"
                 data-analytics-context="{{title}}"
