cambios de algo

--- a/summerdelight/resources/templates/index.hbs
+++ b/summerdelight/resources/templates/index.hbs
@@ -12,10 +12,12 @@
 		<!-- Section Timeline -->
 		{{> timeline }}
 
+		{{> faqs }}
 		<!-- Link Legales -->
 		{{> legales }}
 	</div>
 	{{> cintillo-footer }}
+
 </div>
 
 <script src="js/ws10.js"></script>
