--- a/summerdelight/resources/templates/partials/faqs.hbs
+++ b/summerdelight/resources/templates/partials/faqs.hbs
@@ -1,6 +1,6 @@
 <!-- FAQS-->
 <div class="vfms-faqs vfes-layout__item vfes-pt- vfes-color-bg-vodafone-white ws10-u--pb12x">
-  <div class="vfes-layout__wrapper vfes-pb+">
+  <div>
     <h3
       class="vfes-title vfes-title--3 vfes-pt+ vfes-pt-mov vfes-align--center"
     >{{faqs.header}}</h3>
