SummerDelight - Link in FAQs

--- a/summerdelight/resources/templates/partials/faqs.hbs
+++ b/summerdelight/resources/templates/partials/faqs.hbs
@@ -33,6 +33,35 @@
             </section>
           {{/each }}
 
+          <section
+            class="ws10-c-accordion ws10-c-accordion--dark ws10-u--mb3x"
+            data-ws10-js="accordion"
+          >
+            <div class="ws10-c-accordion__item ws10-o-collapse">
+              <a
+                class="ws10-c-accordion__header"
+                href="#item3"
+                data-ws10-collapse="linked-accordion"
+              >
+                <h3
+                  class="ws10-c-accordion__title"
+                >¿Tengo que hacer algo para disfrutar de los servicios de streaming incluidos sin coste en mi pack? (Eurosport Player, TIDAL)</h3>
+              </a>
+              <div class="ws10-o-collapse__panel" id="item3" hidden>
+                <div class="ws10-c-accordion__content">
+                  <p>
+                      Una vez tengas activado tu Pack de Vodafone TV podrás activar Eurosport Player y/o TIDAL en
+                      <a href="http://vodafone.es/entretenimiento" title="Activar Pack de Vodafone TV" target="_blank">
+                          vodafone.es/entretenimiento
+                      </a>.
+                      Una vez termine la promoción dejarás de tener disponibles estos servicios de manera automática
+                      y sin coste adicional al igual que el pack de Vodafone TV.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </section>
+
         </div>
       </div>
     </div>
