--- a/summerdelight/resources/templates/partials/faqs.hbs
+++ b/summerdelight/resources/templates/partials/faqs.hbs
@@ -1,8 +1,8 @@
 <!-- FAQS-->
-<div class="vfms-faqs vfes-layout__item vfes-pt- vfes-color-bg-vodafone-white ws10-u--pb12x">
-  <div>
+<div class="vfms-faqs vfes-layout__item vfes-color-bg-vodafone-white ws10-u--pb12x">
+  <div class="vfes-layout__wrapper">
     <h3
-      class="vfes-title vfes-title--3 vfes-pt+ vfes-pt-mov vfes-align--center"
+      class="vfes-title vfes-title--3 vfes-pt-mov vfes-align--center"
     >{{faqs.header}}</h3>
     <div class="vfes-mt0-mov">
 
